discussion/jgit/137575/137575_rev44_discussion.txt
======================================================================================================================
DESCRIPTION:

Add difftool compare feature (execute external tool)

see: http://git-scm.com/docs/git-difftool

* add CommandExecutor that handles tool execution with help of "jgit.FS"
  * it handles tool execution with temporary created "command file" -->
for for all "command interpreters" and parameters with spaces etc.
  * using of external bash.exe at Windows (MinGW) if shell-script is
used as difftool command. It can be enabled with parameter
"jgit.usemsys2bash=auto" that checks if command contains ".sh" or
enabled / disabled with "jgit.usemsys2bash=true|false"
* added special handling for empty files (e.g. deleted, added etc.) that
are named "/dev/null"
* added creation and deletion of temporary files needed for compare
* added own Exception class for reporting to pgm / command line / EGit
* added prompt option handling before executing difftool
* reworked trustExitCode option for specific difftool and override for
all difftools from config and command line
* tested with command line options "--[no]-trust-exit-code",
"--tool=<toolname>", "--[no]-gui", --[no]-prompt
* ContentSource
  * added close() methods to close / cleanup used resources
(like ObjectReader TreeWalk etc.)
  * added isWorkingTreeSource() methods to check if file can be used
from working tree instead of copy from "ObjectLoader / ObjectReader" to
temporary file (fixes "difftool <commit> <commit>")

Bug: 356832
Change-Id: I5462fb6dbe4ecfd9da7c74117fce4070bbfd4d7a
Signed-off-by: Andre Bossert <andre.bossert@siemens.com>
Signed-off-by: Simeon Andreev <simeon.danailov.andreev@gmail.com>
======================================================================================================================
COMMENTS
======================================================================================================================
Author: Andrey Loskutov
Date: 2022-05-25 11:24:50.000000000
Message: 
Uploaded patch set 44.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2022-05-25 11:25:06.000000000
Message: 
Patch Set 44:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline.java11/1290/
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2022-05-25 11:28:13.000000000
Message: 
Patch Set 44: Code-Review+1

(1 comment)
File Comment: /PATCHSET_LEVEL -> I've reviewed & checked code, looks good for me. If no one heads up, I plan to merge.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2022-05-25 11:36:45.000000000
Message: 
Patch Set 44: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline.java11/1290/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2022-05-27 04:57:27.000000000
Message: 
Patch Set 44: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2022-05-27 04:57:51.000000000
Message: 
Change has been successfully merged
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2022-06-15 16:07:08.000000000
Message: 
Patch Set 44:

(1 comment)
Line:148, org.eclipse.jgit/src/org/eclipse/jgit/internal/diffmergetool/CommandExecutor.java -> this causes the following errorprone error (to reproduce run bazel build on master):

org.eclipse.jgit/src/org/eclipse/jgit/internal/diffmergetool/CommandExecutor.java:205: error: [DefaultCharset] Implicit use of the platform default charset, which can result in differing behaviour between JVM executions or incorrect behavior if the encoding of the data source doesn't match expectations.
			byte[] strToBytes = command.getBytes();
			                                    ^
    (see https://errorprone.info/bugpattern/DefaultCharset)
  Did you mean 'byte[] strToBytes = command.getBytes(UTF_8);' or 'byte[] strToBytes = command.getBytes(Charset.defaultCharset());'?

----------------------------------------------------------------------------------------------------------------------
Author: Simeon Andreev
Date: 2022-06-16 06:11:49.000000000
Message: 
Patch Set 44:

(1 comment)
Line:148, org.eclipse.jgit/src/org/eclipse/jgit/internal/diffmergetool/CommandExecutor.java -> This one has also been fixed by David, thanks!

https://git.eclipse.org/r/c/jgit/jgit/+/194019/4/org.eclipse.jgit/src/org/eclipse/jgit/internal/diffmergetool/CommandExecutor.java

----------------------------------------------------------------------------------------------------------------------
